# dear-imgui-unity-dev

./: .gitmodules  README.md
dear-imgui-project/: .gitignore
dear-imgui-project/Assets/HDRPDefaultResources/: HDRenderPipelineAsset.asset
dear-imgui-project/Assets/Scenes/: SampleSceneBuiltIn.unity  SampleSceneHDRP.unity  SampleSceneURP.unity
dear-imgui-project/Assets/Scripts/: DearImGuiDemo.cs
dear-imgui-project/Assets/Settings/: HDRP-Pipeline.asset  URP-ForwardRenderer.asset
dear-imgui-project/ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  HDRPProjectSettings.asset  ProjectSettings.asset  QualitySettings.asset
src/: CMakeLists.txt  build-android.cmd  build-native.cmd  build-native.sh
src/AndroidBuildProject/: settings.gradle
src/AndroidBuildProject/app/: build.gradle
src/AndroidBuildProject/app/src/main/: AndroidManifest.xml
src/cimgui-unity/: CMakeLists.txt
